test/domains/operators/domain-scalar.good
domain-scalar.chpl:15: error: addition of a rectangular domain and int(64) is currently not supported
domain-scalar.chpl:16: error: addition of a rectangular domain and bool is currently not supported
domain-scalar.chpl:17: error: addition of a rectangular domain and boundKind is currently not supported
domain-scalar.chpl:18: error: addition of a rectangular domain and 2*int(64) is currently not supported
domain-scalar.chpl:19: error: addition of a rectangular domain and range(int(64),both,one) is currently not supported
domain-scalar.chpl:20: error: addition of a rectangular domain and int(64) is currently not supported
domain-scalar.chpl:21: error: addition of a rectangular domain and bool is currently not supported
domain-scalar.chpl:22: error: addition of a rectangular domain and boundKind is currently not supported
domain-scalar.chpl:23: error: addition of a rectangular domain and 2*int(64) is currently not supported
domain-scalar.chpl:24: error: addition of a rectangular domain and range(int(64),both,one) is currently not supported
domain-scalar.chpl:25: error: addition of a rectangular domain and int(64) is currently not supported
domain-scalar.chpl:26: error: addition of a rectangular domain and bool is currently not supported
domain-scalar.chpl:27: error: addition of a rectangular domain and boundKind is currently not supported
domain-scalar.chpl:28: error: addition of a rectangular domain and 2*int(64) is currently not supported
domain-scalar.chpl:29: error: addition of a rectangular domain and range(int(64),both,one) is currently not supported
domain-scalar.chpl:30: error: addition of a rectangular domain and int(64) is currently not supported
domain-scalar.chpl:31: error: addition of a rectangular domain and bool is currently not supported
domain-scalar.chpl:32: error: addition of a rectangular domain and boundKind is currently not supported
domain-scalar.chpl:33: error: addition of a rectangular domain and 2*int(64) is currently not supported
domain-scalar.chpl:34: error: addition of a rectangular domain and range(int(64),both,one) is currently not supported
domain-scalar.chpl:36: error: addition of int(64) and a rectangular domain is currently not supported
domain-scalar.chpl:37: error: addition of bool and a rectangular domain is currently not supported
domain-scalar.chpl:38: error: addition of boundKind and a rectangular domain is currently not supported
domain-scalar.chpl:39: error: addition of 2*int(64) and a rectangular domain is currently not supported
domain-scalar.chpl:40: error: addition of range(int(64),both,one) and a rectangular domain is currently not supported
domain-scalar.chpl:41: error: addition of int(64) and a rectangular domain is currently not supported
domain-scalar.chpl:42: error: addition of bool and a rectangular domain is currently not supported
domain-scalar.chpl:43: error: addition of boundKind and a rectangular domain is currently not supported
domain-scalar.chpl:44: error: addition of 2*int(64) and a rectangular domain is currently not supported
domain-scalar.chpl:45: error: addition of range(int(64),both,one) and a rectangular domain is currently not supported
domain-scalar.chpl:46: error: addition of int(64) and a rectangular domain is currently not supported
domain-scalar.chpl:47: error: addition of bool and a rectangular domain is currently not supported
domain-scalar.chpl:48: error: addition of boundKind and a rectangular domain is currently not supported
domain-scalar.chpl:49: error: addition of 2*int(64) and a rectangular domain is currently not supported
domain-scalar.chpl:50: error: addition of range(int(64),both,one) and a rectangular domain is currently not supported
domain-scalar.chpl:51: error: addition of int(64) and a rectangular domain is currently not supported
domain-scalar.chpl:52: error: addition of bool and a rectangular domain is currently not supported
domain-scalar.chpl:53: error: addition of boundKind and a rectangular domain is currently not supported
domain-scalar.chpl:54: error: addition of 2*int(64) and a rectangular domain is currently not supported
domain-scalar.chpl:55: error: addition of range(int(64),both,one) and a rectangular domain is currently not supported
domain-scalar.chpl:57: error: subtraction of a rectangular domain and int(64) is currently not supported
domain-scalar.chpl:58: error: subtraction of a rectangular domain and bool is currently not supported
domain-scalar.chpl:59: error: subtraction of a rectangular domain and boundKind is currently not supported
domain-scalar.chpl:60: error: subtraction of a rectangular domain and 2*int(64) is currently not supported
domain-scalar.chpl:61: error: subtraction of a rectangular domain and range(int(64),both,one) is currently not supported
domain-scalar.chpl:62: error: subtraction of a rectangular domain and int(64) is currently not supported
domain-scalar.chpl:63: error: subtraction of a rectangular domain and bool is currently not supported
domain-scalar.chpl:64: error: subtraction of a rectangular domain and boundKind is currently not supported
domain-scalar.chpl:65: error: subtraction of a rectangular domain and 2*int(64) is currently not supported
domain-scalar.chpl:66: error: subtraction of a rectangular domain and range(int(64),both,one) is currently not supported
domain-scalar.chpl:67: error: subtraction of a rectangular domain and int(64) is currently not supported
domain-scalar.chpl:68: error: subtraction of a rectangular domain and bool is currently not supported
domain-scalar.chpl:69: error: subtraction of a rectangular domain and boundKind is currently not supported
domain-scalar.chpl:70: error: subtraction of a rectangular domain and 2*int(64) is currently not supported
domain-scalar.chpl:71: error: subtraction of a rectangular domain and range(int(64),both,one) is currently not supported
domain-scalar.chpl:72: error: subtraction of a rectangular domain and int(64) is currently not supported
domain-scalar.chpl:73: error: subtraction of a rectangular domain and bool is currently not supported
domain-scalar.chpl:74: error: subtraction of a rectangular domain and boundKind is currently not supported
domain-scalar.chpl:75: error: subtraction of a rectangular domain and 2*int(64) is currently not supported
domain-scalar.chpl:76: error: subtraction of a rectangular domain and range(int(64),both,one) is currently not supported
